Quorum3/Library/Tests/TypeCheckerGenerated/Pass/ImpAssignNumberObject.quorum
class Main
    action Main
        Object v
        number t = 5.0
        v = cast(Object, t)
        Test(v)
    end

    action Test(number var)
        if var = 5.0
            output "passed"
        end
    end
end
