Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignBoolObjNumber.quorum
class Main
    action Main
        number v = 5.0
        Test(v)
    end

    action Test(Boolean var)
    end
end
